# web_scrapping

./: .gitignore  README.md  pyproject.toml
docs/: AI_Scraping_Playbook.docx  Lecturer_Pack.docx  Student_Handout.md
examples/: 01_quotes_basic.py  02_pagination.py  03_books.py  04_user_agent.py  05_gdelt_one_day.py  06_reddit_arctic_shift.py  07_selenium_js_page.py
examples_finance/: 01_yahoo_single_ticker.py  02_yahoo_basket.py  03_eia_crude_inventory.py  04_wikipedia_index_constituents.py  05_fx_rates_table.py  06_coingecko_crypto.py  README.md
notebook/: web_scraping_demo.ipynb
scripts/: test.py  testreddit.py
